<resources>
    <string name="app_name">RedBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="invertebrates">Invertebrates</string>
    <string name="fish">Fish</string>
    <string name="reptiles">Reptiles</string>
    <string name="birds">Birds</string>
    <string name="mammals">Mammals</string>
    <string name="status">Status</string>
    <string name="propagation">Propagation</string>
    <string name="habitat">Habitat</string>
    <string name="quantity">Quantity</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="limiting_factors">Limiting Factors</string>
    <string name="breeding">Breeding</string>
    <string name="security">Security</string>
</resources>